[KNOWAGE-5876] Delete references to sun.misc.BASE64*